--- a/src/app/barra-navegacao/barra-navegacao.component.html
+++ b/src/app/barra-navegacao/barra-navegacao.component.html
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" [class.active]="opcaoMenu=='usuarios'" [routerLink]="[ '/usuarios' ]">Usuários</a>
+          <a class="nav-link" routerLinkActive="active" [routerLink]="[ '/usuarios' ]">Usuários</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [class.active]="opcaoMenu=='operacoes'" [routerLink]="[ '/operacoes' ]">Operações</a>
+          <a class="nav-link" routerLinkActive="active" [routerLink]="[ '/operacoes' ]">Operações</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [class.active]="opcaoMenu=='grupoUsuarios'" [routerLink]="[ '/grupos' ]">Grupo de Usuários</a>
+          <a class="nav-link" routerLinkActive="active" [routerLink]="[ '/grupos' ]">Grupo de Usuários</a>
         </li>
       </ul>
 
