Navegaçao para formulario de usuario

--- a/src/app/usuarios/usuario/usuario.component.html
+++ b/src/app/usuarios/usuario/usuario.component.html
@@ -1,6 +1,6 @@
 <h1 class="page-header">Relação de Usuários</h1>
 
-<a *ngIf="isAuth" [routerLink]="[ '/usuarios/add' ]" class="btn btn-outline-success" style="margin-bottom: 15px;">
+<a *ngIf="isAuth" [routerLink]="[ 'form' ]" class="btn btn-outline-success" style="margin-bottom: 15px;">
   <i class="fas fa-user-plus"></i>
   Novo Usuário
 </a>
