--- a/src/app/usuarios/usuario-form/usuario-form.component.html
+++ b/src/app/usuarios/usuario-form/usuario-form.component.html
@@ -43,6 +43,6 @@
   </ng-template>
 
   <button type="submit" class="btn btn-primary">Cadastrar</button>
-  <a href="/" class="btn btn-secondary">Voltar</a>
+  <a [routerLink]="[ '/usuarios' ]" class="btn btn-secondary">Voltar</a>
 </form>
 </div>
